--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@react-google-maps/api": "^2.20.6",
     "lucide-react": "^0.476.0",
     "next": "15.1.7",
     "react": "^19.0.0",
