--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@react-google-maps/api": "^2.20.6",
+    "framer-motion": "^12.5.0",
     "lucide-react": "^0.476.0",
     "next": "15.1.7",
     "react": "^19.0.0",
